Prevent ng:deep style from bleeding to other components

--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -3,6 +3,6 @@
   flex-wrap: wrap;
 }
 
-div ::ng-deep > * {
+:host > * ::ng-deep > * ::ng-deep {
   flex-grow: 1;
 }
